fix: address code quality issues across modules
- Use AtomicInteger and AtomicReference for thread-safe fields in MockBrokerConnector
- Chain AssertJ assertions and use hasSameHashCodeAs/hasToString
- Replace duplicate tests with parameterized test in HeadersCodecTest
- Capture nullable values in local variables before null checks
- Add table name validation in JdbcOutboxRepository to prevent SQL injection
- Use computeIfPresent instead of get+put pattern
- Remove unused partitionCounter field
- Throw IllegalStateException for unknown status instead of silent default